k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
spec:
  revisionHistoryLimit: 3 # keep 3 old ReplicaSets
  replicas: 1
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
        - name: website
          image: ghcr.io/ews500/my-app:2319644e4ff24bf3dee633f5da6f8601e82cf24e
          imagePullPolicy: IfNotPresent               # don't pull from registry if local exists
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
