k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website
spec:
  selector:
    app: website
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
